# r3bl-open-core

./: .editorconfig  .gitconfig  .gitignore  .prettierignore  .prettierrc  1.code-search  2.code-search  3.code-search  4.code-search  AGENT.md  AGENTS.md  BACKLOG.todo  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DONE.todo  GEMINI.md  LICENSE  PROGRESS.md  README.md  TODO  TODO.todo  bacon.toml  bootstrap.sh  build.fish  cargo-all.fish  cargo-doc.fish  cargo-one.fish  cargo-upgrade.fish  cargo-watch-all-tests.fish  cargo-watch-macro-expand-one-test.fish  cargo-watch-one-test.fish  check-licenses.fish  check.fish  check_cargo.fish  check_cli.fish  check_constants.fish  check_detection.fish  (+46 more)
analytics_schema/: Cargo.toml  README.md
analytics_schema/src/: analytics_data.rs  lib.rs
ansi_color/: Cargo.toml  README.md  justfile  run  run.nu
ansi_color/examples/: main.rs
ansi_color/src/: ansi256_color.rs  ansi_escape_codes.rs  ansi_styled_text.rs  ast_color.rs  color.rs  convert.rs  detect_color_support.rs  lib.rs  rgb_color.rs  term.rs  transform_color.rs
build-infra/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
build-infra/reference/nspawn-scripts/: README.md  run.fish  setup.fish  status.fish  teardown.fish
build-infra/src/: lib.rs
build-infra/src/cargo_rustdoc_fmt/: cli_arg.rs  content_protector.rs  extractor.rs  known_technical_term_link_dictionary.jsonc  link_converter.rs  mod.rs  processor.rs  table_formatter.rs  technical_term_dictionary.rs  technical_term_linker.rs  types.rs  ui_str.rs
build-infra/src/common/: cargo_fmt_runner.rs  workspace_utils.rs
build-infra/test_data/: AGENTS.md
clipboard/: Cargo.toml
clipboard/examples/: hello_world.rs  primary_selection.rs
clipboard/src/: common.rs  lib.rs  nop_clipboard.rs  osx_clipboard.rs  windows_clipboard.rs  x11_clipboard.rs
cmdr/: Cargo.toml  README.md  TODO.todo  manual.md  run  run.nu
cmdr/docker/: Dockerfile  README.md  docker-compose.yml  install.bash
cmdr/src/: analytics_client.rs  color_constants.rs  lib.rs  main.rs
cmdr/src/analytics/: analytics_client.rs  analytics_data.rs  mod.rs
cmdr/src/analytics_client/: analytics_action.rs  analytics_client.rs  config_folder.rs  file_io.rs  http_client.rs  mod.rs  proxy_machine_id.rs  report_analytics.rs  ui_str.rs  upgrade_check.rs
cmdr/src/ch/: choose_prompt.rs  cli_arg.rs  image_handler.rs  mod.rs  prompt_history.rs  types.rs  ui_str.rs
cmdr/src/common/: fmt.rs  mod.rs  ui_templates.rs
cmdr/src/edi/: app_main.rs  app_signal.rs  clap_config.rs  launcher.rs  manual.md  mod.rs  state.rs  ui_str.rs  ui_templates.rs
cmdr/src/entry_point/: app.rs
cmdr/src/giti/: clap_config.rs  common_types.rs  git.rs  mod.rs  ui_str.rs  ui_strings.rs  ui_templates.rs
cmdr/src/rc/: app.rs  mod.rs
cmdr/systemd-nspawn/: README.md  cleanup.fish  create-containers.fish  install.bash  run-test.fish
core/: Cargo.toml  README.md
core/src/: async_safe_share_mutate.rs  calc_str_len.rs  color_text.rs  console_log_impl.rs  decl_macros.rs  glyphs.rs  lib.rs  term.rs  test_decl_macros.rs
core/src/ansi/: ansi_styled_text.rs  ast_color.rs  (+3 more)
log/: Cargo.toml  README.md
log/src/: lib.rs
macro/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
macro/src/: builder.rs  fn_wrapper_custom_syntax_parser.rs  lib.rs  make_safe_async_fn_wrapper.rs  make_safe_fn_wrapper.rs  make_shareable_fn_wrapper.rs  make_style.rs  manager_of_things.rs
my_core_lib/: Cargo.toml
my_core_lib/src/: async_safe_share_mutate.rs
my_proc_macros_lib/: Cargo.toml
my_proc_macros_lib/src/: lib.rs  manager_of_things.rs
r3bl-build-infra/: CLAUDE.md  Cargo.toml  README.md
r3bl-build-infra/src/: lib.rs
redux/: Cargo.toml  README.md  rustfmt.toml
redux/src/: lib.rs
script/: Cargo.toml  README.md
script/src/: apt_install.rs  command_runner.rs  directory_change.rs  directory_create.rs  download.rs  environment.rs  fs_path.rs  github_api.rs  http_client.rs  lib.rs  permissions.rs
simple_logger/: Cargo.toml  README.md
simple_logger/examples/: custom_colors.rs  default_colors.rs  rgb_colors.rs  usage.rs
simple_logger/src/: config.rs  lib.rs
terminal_async/: Cargo.toml  README.md  TODO.todo  run
terminal_async/examples/: choose.rs  main_interactive.rs  readline_async.rs  shell_async.rs  single_select_quiz_game.rs  spinner.rs  terminal_async.rs
terminal_async/src/: lib.rs
test_fixtures/: Cargo.toml  README.md
test_fixtures/src/: async_stream_fixtures.rs  lib.rs  stdout_fixtures.rs  temp_dir.rs
tui/: Cargo.toml  README.md  flamegraph-benchmark-baseline.perf-folded  flamegraph-benchmark-flat2darray.perf-folded  flamegraph-benchmark-legacy-pixelcharlines.perf-folded  flamegraph-benchmark.perf-folded  flamegraph-crossterm-baseline.perf-folded  flamegraph-direct_to_ansi.perf-folded  flamegraph.perf-folded  run  run-one-test.fish  run.nu  rustfmt.toml
tui/docs/: ANSI_TESTING.md  README.md
tui/examples/: choose.rs  choose_interactive.rs  choose_quiz_game.rs  choose_sync_and_async.rs  choose_sync_interactive.rs  choose_sync_quiz_game.rs  choose_with_and_without_readline_async.rs  main_interactive.rs  mouse_inspector.rs  pty_mux_example.rs  pty_mux_osc_demo.rs  pty_rw_echo_example.rs  pty_simple_example.rs  readline_async.rs  readline_async_multiline.rs  shell_async.rs  single_select_quiz_game.rs  spawn_pty_interactive.rs  spawn_pty_output_capture.rs  spawn_pty_read_channel.rs  spawn_pty_read_only.rs  spawn_pty_read_write.rs  spinner.rs
tui/src/: lib.rs
tuify/: Cargo.toml  README.md  TODO.todo  justfile  run  run.nu  rust-toolchain.toml
tuify/examples/: choose_async.rs  main_interactive.rs  single_select_quiz_game.rs
tuify/src/: constants.rs  event_loop.rs  function_component.rs  keypress.rs  lib.rs  main.rs  misc_types.rs  public_api.rs  react.rs  scroll.rs  state.rs  term.rs  test_utils.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs
utils/tests/: test_lazy_field.rs  test_lazy_memo_values.rs  test_tree_memory_arena.rs  test_utils.rs
vendored-crates/rust-mcp/: Cargo.toml  LICENSE  README.md  test_code.rs  test_diagnostics.rs
(+2823 files in other folders)
