# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html#creating-the-second-package-in-the-workspace

# Make sure to keep this in sync with `run` nushell script `$workspace_folders`.
[workspace]
members = ["analytics_schema", "cmdr", "tui"]

# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

# https://github.com/trailofbits/cargo-unmaintained
[workspace.metadata.unmaintained]
ignore = ["gethostname", "objs", "home", "proc-macro-error", "wayland-commons"]

##########################################################################################################################
# ------------- RUSTC LINTS SECTION -------------                                                                        #
# `cargo clippy` lint configuration for `rustc`.                                                                         #
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html                                                  #
# https://www.linkedin.com/posts/marcoieni_i-finally-found-some-time-to-review-all-the-activity-7307355034642452481-EVLZ #
##########################################################################################################################
[workspace.lints.rust]
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
explicit_outlives_requirements = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unsafe_attr_outside_unsafe = "warn"
unused = "warn"
unused_import_braces = "warn"

#############################################################
# ------------- CLIPPY LINTS SECTION -------------          #
# `cargo clippy` lint configuration for `clippy`.           #
# https://rust-lang.github.io/rust-clippy/master/index.html #
#############################################################
[workspace.lints.clippy]
#----------------------------------------
# Reasonable defaults for clippy lints. #
#----------------------------------------
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
#------------------------------------------------------------------------------
# Explicitly set the level for each lint. This might be redundant with `all`. -
#------------------------------------------------------------------------------
unwrap_in_result = "warn"
doc_markdown = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
semicolon_if_nothing_returned = "warn"
must_use_candidate = "warn"
items_after_statements = "warn"
manual_is_multiple_of = "warn"
needless_return = "warn"
unreadable_literal = "warn"
redundant_else = "warn"
iter_without_into_iter = "warn"
explicit_iter_loop = "warn"
ignored_unit_patterns = "warn"
match_wildcard_for_single_variants = "warn"
default_trait_access = "warn"
manual_instant_elapsed = "warn"
map_unwrap_or = "warn"
missing_panics_doc = "warn"
unused_self = "warn"
single_char_pattern = "warn"
manual_let_else = "warn"
unnecessary_semicolon = "warn"
cast_precision_loss = "warn"
if_not_else = "warn"
unnecessary_wraps = "warn"
return_self_not_must_use = "warn"
match_bool = "warn"
comparison_chain = "warn"
elidable_lifetime_names = "warn"
wildcard_imports = "warn"
large_futures = "warn"
#-----------------------------------------------
# Explicitly allow these lints to avoid noise. -
#-----------------------------------------------
needless_pass_by_value = "allow"  # This triggers legitimate use of passing a Copy arg by value to a function.
similar_names = "allow"  # This triggers legitimate variable names.
single_match_else = "allow" # Rust 2024 changes if-let scope, so match on a single case is needed to retain the old behavior.
#-----------------------------------------
# Additional pedantic lints to suppress. -
#-----------------------------------------
missing_errors_doc = "allow"
too_many_lines = "allow"
match_same_arms = "allow"

##########################################################################################################################
# ------------- RUSTC PROFILES SECTION -------------                                                                     #
# `cargo build --profile profiling` and `cargo build --profile profiling-detailed` configuration for `rustc`.            #
##########################################################################################################################

[profile.profiling-detailed]
inherits = "release"
debug = true
strip = false
lto = false
codegen-units = 256
opt-level = 2
