[package]
name = "r3bl_analytics_schema"
description = "Support crate for r3bl-cmdr, r3bl-base."
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde-json.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Uuid.
uuid = { version = "1.10.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
