[package]
name = "r3bl_analytics_schema"
description = "Support crate for r3bl-cmdr, r3bl-base."
version = "0.0.2"
edition = "2024"
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/analytics_schema"
documentation = "https://docs.rs/analytics_schema"
homepage = "https://r3bl.com"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde-json.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

# Uuid.
uuid = { version = "1.11.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

# For smallstr & smallvec.
smallstr = { version = "0.3.0", features = ["serde", "std"] }
smallvec = { version = "1.6.1", features = ["serde"] }
