[package]
name = "r3bl_analytics_schema"
description = "Support crate for r3bl-cmdr, r3bl-base"
version = "0.0.3"
edition = "2024"
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/analytics_schema"
documentation = "https://docs.rs/analytics_schema"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde-json.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Uuid.
uuid = { version = "1.16.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

# For smallstr & smallvec.
smallstr = { version = "0.3.0", features = ["std", "union"] }
smallvec = { version = "1.15.0", features = [
  "union",
  "const_generics",
  "const_new",
  "serde",          # small needs `server` feature flag here, but not in other Cargo.toml files in this workspace.
] }
