[package]
name = "r3bl_ansi_color"
description = "Rust crate to generate formatted ANSI 256 (8-bit) and truecolor (24-bit) color output to stdout"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["color", "terminal", "ansi", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

# When you change this, make sure to update `README.md` and `lib.rs` as well.
version = "0.6.7"

edition = "2021"
readme = "README.md" # This is not included in cargo docs.
authors = ["Nazmul Idris <idris@developerlife.com>"]
repository = "https://github.com/r3bl-org/r3bl_rs_utils/tree/main/ansi_color"
documentation = "https://docs.rs/r3bl_ansi_color"
homepage = "https://r3bl.com"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
is-terminal = "0.4.0"
is_ci = "1.1.1"
once_cell = "1.18.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
serial_test = "2.0.0"
