[package]
name = "r3bl_ansi_color"
description = "Rust crate to generate formatted ANSI 256 (8-bit) and truecolor (24-bit) color output to stdout"
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["color", "terminal", "ansi", "cli"]
categories = ["command-line-interface", "command-line-utilities"]

# When you change this, make sure to update `README.md` and `lib.rs` as well.
version = "0.7.0"

edition = "2024"
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"
readme = "README.md" # This is not included in cargo docs.
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/ansi_color"
documentation = "https://docs.rs/r3bl_ansi_color"
homepage = "https://r3bl.com"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
is_ci = "1.2.0"

# For smallstr & smallvec.
smallstr = { version = "0.3.0", features = ["std", "union"] }
smallvec = { version = "1.6.1", features = [
  "union",
  "const_generics",
  "const_new",
] }

# For counting enum variants.
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
pretty_assertions = "1.4.1"
serial_test = "3.1.1"
test-case = "3.3.1"
