[package]
name = "r3bl_clipboard"
version = "0.5.0"
description = "rust-clipboard is a cross-platform library for getting and setting the contents of the OS-level clipboard."
repository = "https://github.com/r3bl_rs_utils/r3bl_clipboard"
license = "Apache-2.0"
keywords = ["clipboard"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = "0.8.1"
xcb = "1.2.2"
