[package]
name = "r3bl-cmdr"
version = "0.0.16"
readme = "README.md"
edition = "2024"
homepage = "https://r3bl.com"
license = "Apache-2.0"

description = """
A TUI app suite for developers. Includes a Markdown editor `edi` and a git client `giti`.
"""
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["tui", "editor", "git"]
categories = ["command-line-interface", "command-line-utilities"]

repository = "https://github.com/r3bl-org/r3bl-open-core"
authors = [
    "Nazmul Idris <idris@developerlife.com>",
    "Nadia Idris <nadia@developerlife.com>",
]
documentation = "https://docs.rs/r3bl-cmdr"

# More info on default-run: https://stackoverflow.com/a/51790493/2085356
default-run = "rc"

[[bin]]
name = "giti"
path = "src/bin/giti.rs"

[[bin]]
name = "edi"
path = "src/bin/edi.rs"

[[bin]]
name = "rc"
path = "src/bin/rc.rs"

[lib]
name = "r3bl_cmdr"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# R3BL crates (from this mono repo).
r3bl_analytics_schema = { path = "../analytics_schema", version = "0.0.2" } # version is required to publish to crates.io
r3bl_core = { path = "../core", version = "0.10.0" }                        # version is required to publish to crates.io
r3bl_tui = { path = "../tui", version = "0.6.0" }                           # version is required to publish to crates.io

# Reqwest (HTTP client).
reqwest = { version = "0.12.8", features = ["json"] }

# Clap.
# More info: https://stackoverflow.com/a/76131914/2085356
clap = { version = "4.5.20", features = ["derive", "wrap_help", "help"] }

# serde-json.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"

# Open URLs.
open = "5.3.0"

# Save config files.
dirs = "5.0.1"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-core = "0.1.32"

# Error handling.
miette = { version = "7.2.0", features = ["fancy"] }

# For smallstr & smallvec.
smallvec = { version = "1.6.1", features = [
    "union",
    "const_generics",
    "const_new",
] }

# Enum to string generation.
strum = "0.26.3"
strum_macros = "0.26.4"
