[package]
name = "r3bl-cmdr"
version = "0.0.19"
readme = "README.md"
edition = "2024"
homepage = "https://r3bl.com"
license = "Apache-2.0"

description = """
A TUI app suite for developers. Includes a Markdown editor `edi` and a git client `giti`.
"""
# At most 5 keywords w/ no spaces, each has max length of 20 char.
keywords = ["tui", "editor", "git"]
categories = ["command-line-interface", "command-line-utilities"]

repository = "https://github.com/r3bl-org/r3bl-open-core"
authors = [
    "Nazmul Idris <idris@developerlife.com>",
    "Nadia Idris <nadia@developerlife.com>",
]
documentation = "https://docs.rs/r3bl-cmdr"
# More info on default-run: https://stackoverflow.com/a/51790493/2085356
default-run = "rc"

[lints]
workspace = true

[[bin]]
name = "giti"
path = "src/bin/giti.rs"

[[bin]]
name = "edi"
path = "src/bin/edi.rs"

[[bin]]
name = "rc"
path = "src/bin/rc.rs"

[lib]
name = "r3bl_cmdr"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# R3BL crates (from this mono repo).
r3bl_analytics_schema = { path = "../analytics_schema", version = "0.0.3" } # version is required to publish to crates.io
r3bl_tui = { path = "../tui", version = "0.7.1" }                           # version is required to publish to crates.io

# HTTP client for analytics_client.
# Reqwest (HTTP client). Use `rustls` instead of `openssl` for TLS support.
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Clap.
# More info: https://stackoverflow.com/a/76131914/2085356
clap = { version = "4.5.37", features = ["derive", "wrap_help", "help"] }

# serde-json.
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Open URLs.
open = "5.3.2"

# Save config files.
dirs = "6.0.0"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-core = "0.1.33"

# Error handling.
miette = { version = "7.6.0", features = ["fancy"] }

# For smallstr & smallvec.
smallvec = { version = "1.15.0", features = [
    "union",
    "const_generics",
    "const_new",
] }

# `mimalloc` is a replacement for the default global allocator. It's optimized for
# multi-threaded use cases where lots of small objects are created and destroyed.
# The default allocator is the system allocator that's optimized for single threaded
# use cases.
#
# mimalloc (by Microsoft):
# - https://github.com/microsoft/mimalloc?tab=readme-ov-file#performance
#
# jemalloc (originally by Facebook, now archived):
# - https://www.svix.com/blog/heap-fragmentation-in-rust-applications/
# - https://news.ycombinator.com/item?id=35473271
# - https://crates.io/crates/jemallocator
mimalloc = "0.1.46"

[dev-dependencies]
# For assert_eq2! macro.
serial_test = "3.2.0"
pretty_assertions = "1.4.1"
test-case = "3.3.1"
