[package]
name = "r3bl_rs_utils_core"
version = "0.9.16"
edition = "2021"
resolver = "2"
description = """
Helper crate for r3bl_tui and r3bl_tuify crates.
Used by workspace in https://github.com/r3bl-org/r3bl-open-core.
"""
# Email address(es) has to be verified at https://crates.io/me/
authors = [
  "Nazmul Idris <idris@developerlife.com>",
  "Nadia Idris <nadia@developerlife.com>",
]
repository = "https://github.com/r3bl-org/r3bl-open-core/tree/main/core"
documentation = "https://docs.rs/r3bl_rs_utils_core/"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
name = "r3bl_rs_utils_core"
path = "src/lib.rs"

# Documentation for crate layout.
# [General crate layout](https://stackoverflow.com/a/57767413/2085356)
# [Nesting crates for procedural macros](https://stackoverflow.com/a/64288799/2085356)

[dependencies]
# r3bl-open-core.
r3bl_ansi_color = { path = "../ansi_color", version = "0.6.9" } # Convert between ansi and rgb.
log = { version = "0.4.22", features = ["std"] }                # For logging.

# https://github.com/serde-rs/serde.
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Unicode, grapheme clusters.
unicode-width = "0.1.13"
unicode-segmentation = "1.11.0"

# Time
chrono = "0.4.38"
time = "0.3.36"

# nom parser combinator.
nom = "7.1.3"

# Misc.
rand = "0.8.5"
sha2 = "0.10.8"
strip-ansi = "0.1.0"

# For size of variables in heap.
size-of = "0.1.5"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"

# Terminal output.
crossterm = { version = "0.28.1", features = ["event-stream"] } # EventStream
futures-util = "0.3.30"                                         # Needed for crossterm EventStream

# Color gradients.
colorgrad = "0.7.0"

# Error handling.
thiserror = "1.0.63"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"

# Enum to string generation.
strum = "0.26.3"
strum_macros = "0.26.4"

# Convert Rust structs to and from binary representation.
bincode = { version = "1.3.3" }

# Key Value store that can be used to store JSON or bincode encoded values. `kv` is built
# on top of `sled` which currently does not support access across multiple processes.
kv = { version = "0.24.0", features = ["json-value", "bincode-value"] }

[dev-dependencies]
# for assert_eq! macro
pretty_assertions = "1.4.0"
serial_test = "3.1.1"

# Testing - temp files and folders.
tempfile = "3.12.0"

# Bin targets for testing stdout and stderr.
assert_cmd = "2.0.16"
[[bin]]
name = "tracing_test_bin"
path = "src/bin/tracing_test_bin.rs"
