[package]
name = "r3bl_rs_utils_macro"
version = "0.9.5"
edition = "2021"
description = """
Internal support for a proc-macro library for reading attributes into structs when
implementing custom derives. Used by workspace in https://crates.io/crates/r3bl_rs_utils.
"""
# Email address(es) has to be verified at https://crates.io/me/
authors = ["Nazmul Idris <idris@developerlife.com>"]
repository = "https://github.com/r3bl-org/r3bl-rs-utils"
documentation = "https://docs.rs/r3bl_rs_utils"
homepage = "https://r3bl.com"
license = "Apache-2.0"

[lib]
proc-macro = true
name = "r3bl_rs_utils_macro"
path = "src/lib.rs"

# Documentation for crate layout.
# [General crate layout](https://stackoverflow.com/a/57767413/2085356)
# [Nesting crates for procedural macros](https://stackoverflow.com/a/64288799/2085356)

[dependencies]
r3bl_rs_utils_core = { version = "0.9.5", path = "../core" }

# https://github.com/dtolnay/proc-macro-workshop#debugging-tips
syn = { version = "1.0.109", features = [
  "extra-traits",
  "full",
  "derive",
  "parsing",
] }
quote = "1.0.26"
proc-macro2 = "1.0.56"

# Crossterm & EventStream support.
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures-util = "0.3.28"
paste = "1.0.12"

# For assert_eq2! macro.
pretty_assertions = "1.3.0"
